// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          disabled={true}
          placeholder=" "
          type="datetime-local"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gyVdQG"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fKJsvd"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM kCrhnX"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh bcqKWo"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder=" "
          readOnly={true}
          type="datetime-local"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM oizIL"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM hWVaie"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-gbFqDM TNdkJ"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM VZayz"
          dir="rtl"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-edwNYl epHbuE"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM fgQzgA"
        placeholder="medium"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <input
        className="sc-gbFqDM oizIL"
        placeholder="large"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk ijyiOu"
      >
        <input
          className="sc-gbFqDM gnHsuw"
          placeholder="xlarge"
          type="datetime-local"
        />
        <label
          className="sc-edwNYl ejNdCL"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        medium
      </label>
      <input
        className="sc-gbFqDM gdmOoz"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <label
        className="sc-jSPclO bFMWKW"
      >
        large
      </label>
      <input
        className="sc-gbFqDM fwbcJs"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
    >
      <div
        className="sc-gZRyEk fMtNhl"
      >
        <input
          className="sc-gbFqDM fhHbNd"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-edwNYl ejNdCL"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-jjavrh cpalCw"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
